test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-shared-from-oknil-nil.chpl
//  lhs: shared?  rhs: nil?  ok

class MyClass {  var x: int;  }



record MyRecord {
  var lhs: shared MyClass? = nil;
}

var myr = new MyRecord();


